results/SVCOMP/2-shot/log-assert1-2024_03_18_22_58_58.txt
import java.util.Random;

class assert1 {
    //@ ensures i >= 10;
    //@ ensures i >= 20;
    public static void func() {
        int i = new Random().nextInt();

        if (i >= 10) assert i >= 10 : "my super assertion"; // should hold

        if (i >= 20) assert i >= 10 : "my super assertion"; // should hold
    }
}
/home/max/Documents/JMLGPT/tmp/assert1.java:4: error: cannot find symbol
    //@ ensures i >= 10;
                ^
  symbol:   variable i
  location: class assert1
/home/max/Documents/JMLGPT/tmp/assert1.java:5: error: cannot find symbol
    //@ ensures i >= 20;
                ^
  symbol:   variable i
  location: class assert1
2 errors

